# ghcjs

./: .gitignore  default.nix  ghcjs.cabal  stack.yaml  stage0.yaml  stage1.yaml
ghcjs/: default.nix  ghcjs.cabal
ghcjs-prim/: default.nix  ghcjs-prim.cabal
ghcjs/lib/: settings
ghcjs/src-bin/: Boot.hs  Pkg.hs
ghcjs/src/Compiler/: GhcjsProgram.hs  Info.hs  Program.hs
ghcjs/src/Gen2/: DynamicLinking.hs  Linker.hs
lib/ghcjs-prim/GHCJS/Prim/TH/: Eval.hs
src-bin/: Pkg.hs
