name:                ghcjs-prim
version:             0.1.0.0
homepage:            http://github.com/ghcjs
license:             MIT
license-file:        LICENSE
author:              Luite Stegeman
maintainer:          stegeman@gmail.com
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     GHCJS.Prim
                       GHCJS.Prim.TH.Serialized
                       GHCJS.Prim.TH.Types

  build-depends:       base             >= 4        && < 5,
                       template-haskell >= 2.9      && < 2.11,
                       binary           >= 0.7      && < 0.8,
                       bytestring       >= 0.10     && < 0.11,
                       containers,
                       ghc-prim

  default-language:    Haskell2010
  hs-source-dirs:      src

  if impl(ghcjs)
    c-sources: cbits/ghcjs-prim.c
    ghc-options: -O2
    cpp-options: -DBOOTING_PACKAGE=ghcjs-prim

    exposed-modules:   GHCJS.Prim.Internal
                       GHCJS.Prim.Internal.Build
                       GHCJS.Prim.TH.Eval

    build-depends:     primitive

    -- We need to set the package key to ghcjs-prim (without a version number)
    -- as it's magic.
    ghc-options:       -this-package-key ghcjs-prim
